--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,20 +1,20 @@
 @use "./variables.scss" as *;
 
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind screens;
 
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html,
 body,
 #__next {
-  height: 100vw;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'League Spartan', sans-serif;
 }
 
 body {
